# vkm

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  bootstrap.py  codecov.yml  implementation-notes.md
.claude/: .session-report-marker
.claude/agents/: unittest-writer.md
.claude/commands/: cleanup.md  pr-bot-review.md  run-tests.md  session-report.md
.claude/skills/rebase-main/: SKILL.md
.claude/skills/run-vkm-sample/: SKILL.md
.github/workflows/: macos.yml  ubuntu.yml  wasm.yml  window.yml
.omc/skills/: pr-bot-review.md  rebase-main-resolve-conflicts.md
.omc/state/: skill-sessions.json
Builds/CMake/: CompileOptions.cmake
Dependencies/: bootstrap.json
Includes/vkm/base/: common.h  logger.h  logger.hpp
Includes/vkm/platform/apple/: application.h
Includes/vkm/platform/windows/: application.h
Includes/vkm/renderer/: engine.h
Includes/vkm/renderer/backend/common/: driver.h  swapchain.h
Includes/vkm/renderer/backend/metal/: metal_driver.h  metal_swapchain.h
Includes/vkm/renderer/backend/vulkan/: vulkan_driver.h
Sources/samples/triangle/: CMakeLists.txt  main.cpp  renderpass.json
Sources/vkm/: CMakeLists.txt  WinMain.cpp
Sources/vkm/base/: common.cpp  logger.cpp
Sources/vkm/platform/apple/: application.mm
Sources/vkm/platform/windows/: application.cpp
Sources/vkm/renderer/: engine.cpp
Sources/vkm/renderer/backend/common/: driver.cpp  swapchain.cpp
Sources/vkm/renderer/backend/metal/: metal_driver.mm  metal_swapchain.mm
Tests/RenderingTests/: CMakeLists.txt  RenderingTests.cpp  RenderingTestsUtils.hpp
Tests/UnitTests/: CMakeLists.txt
buildscripts/: CompileOptions.cmake  EmbedBinary.cmake  ShaderCompile.cmake
buildscripts/patches/: spdlog-fmt-emscripten-consteval.patch
dependencies/: bootstrap.json  bootstrap.py  imgui.cmake
dependencies/patches/: emsdk_install.py  fetch_dawn_dependencies.py
include/: CLAUDE.md
include/vkm/base/: common.h  global_variable.h  logger.h  memory.h  platform.h
include/vkm/platform/apple/: application.h
include/vkm/platform/common/: app_delegate.h  glfw_input.h  input_codes.h  input_handler.h  process_stats.h  process_stats_common.h  window.h
include/vkm/platform/linux/: application.h
include/vkm/platform/wasm/: application.h
include/vkm/platform/windows/: application.h
include/vkm/renderer/: engine.h
include/vkm/renderer/imgui/: imgui_renderer.h  metal_imgui_renderer.h  render_graph_inspector.h  vulkan_imgui_renderer.h  webgpu_imgui_renderer.h
resources/: CLAUDE.md
resources/tests/: pso_bad_enum.json  pso_bad_input_layout.json  pso_full.json  pso_minimal.json  pso_missing_vertex.json  pso_options_empty_name.json  pso_with_options.json
scripts/: run_clean.ps1  run_clean.py  run_clean.sh  run_sample.ps1  run_sample.py  run_sample.sh  run_tests.ps1  run_tests.py  run_tests.sh  setup-linux.sh  setup-macos.sh  setup-windows.ps1
src/samples/empty_screen/: CMakeLists.txt  main.cpp
src/samples/triangle/: CMakeLists.txt  main.cpp  renderpass.json  triangle.hlsl
src/tools/vkm-compiler/: CMakeLists.txt  main.cpp  subprocess.cpp  subprocess.h
src/vkm/: CLAUDE.md  CMakeLists.txt
src/vkm/base/: common.cpp  global_variable.cpp  logger.cpp  memory.cpp
src/vkm/platform/apple/: AGENTS.md  application.mm  process_stats.cpp
src/vkm/platform/common/: glfw_input.cpp  input_handler.cpp
src/vkm/platform/linux/: application.cpp  process_stats.cpp
src/vkm/platform/wasm/: AGENTS.md  application.cpp  process_stats.cpp
src/vkm/platform/windows/: AGENTS.md  application.cpp  process_stats.cpp
src/vkm/renderer/: engine.cpp
src/vkm/renderer/backend/common/: backend_util.cpp  bindless_resource_manager.cpp  buffer.cpp  buffer_view.cpp  command_buffer.cpp  command_dispatcher.cpp  command_queue.cpp  command_stream.cpp  deferred_resource_reclaimer.cpp  driver.cpp  driver_resource_pool.cpp  gpu_crash_handler.cpp  gpu_offset_allocator.cpp  pipeline_state_manager.cpp  pipeline_state_object.cpp  pipeline_state_parser.cpp  render_graph.cpp  render_graph_capture.cpp  render_resource.cpp  render_resource_pool.cpp  renderer_common.cpp  sampler.cpp  shader_cache_loader.cpp  shader_cache_util.cpp  staging_buffer.cpp  swapchain.cpp  texture.cpp  texture_view.cpp
src/vkm/renderer/backend/metal/: AGENTS.md  metal_bindless_resource_manager.mm  metal_buffer.mm  metal_buffer_view.mm  metal_command_buffer.mm  metal_command_queue.mm  metal_driver.mm  metal_gpu_heap_pool.mm  metal_pipeline_state.mm  metal_render_resource_pool.mm  metal_sampler.mm  metal_staging_buffer.mm  metal_swapchain.mm  metal_texture.mm  metal_texture_view.mm  metal_util.mm
src/vkm/renderer/backend/vulkan/: AGENTS.md  vulkan_bindless_resource_manager.cpp  vulkan_buffer.cpp  vulkan_buffer_view.cpp  vulkan_command_buffer.cpp  vulkan_command_queue.cpp  vulkan_driver.cpp  vulkan_gpu_buffer_pool.cpp  vulkan_gpu_timer.cpp  vulkan_pipeline_state.cpp  vulkan_sampler.cpp  vulkan_staging_buffer.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp  vulkan_texture_view.cpp  vulkan_util.cpp
src/vkm/renderer/backend/webgpu/: AGENTS.md  webgpu_bindless_resource_manager.cpp  webgpu_buffer.cpp  webgpu_buffer_view.cpp  webgpu_command_buffer.cpp  webgpu_command_queue.cpp  webgpu_driver.cpp  webgpu_pipeline_state.cpp  webgpu_sampler.cpp  webgpu_staging_buffer.cpp  webgpu_swapchain.cpp  webgpu_texture.cpp  webgpu_texture_view.cpp  webgpu_util.cpp
src/vkm/renderer/imgui/: imgui_renderer.cpp  metal_imgui_renderer.mm  metal_imgui_shader.metal  render_graph_inspector.cpp  vulkan_imgui_renderer.cpp  webgpu_imgui_renderer.cpp
tests/: CLAUDE.md  CMakeLists.txt  TestBackbufferReadback.mm  TestBindlessSlotAllocator.cpp  TestClipSpaceOrientation.cpp  TestClipSpaceOrientationMetal.mm  TestClipSpaceOrientationShared.hpp  TestEngineSetup.cpp  TestGlobalVariable.cpp  TestInputHandler.cpp  TestMemoryTracker.cpp  TestMetalBindlessTriangle.mm  TestMetalDriver.mm  TestPipelineStateManager.cpp  TestPsoConfig.cpp  TestRenderGraphCapture.mm  TestShaderCacheUtil.cpp  UnitTestUtils.hpp  UnitTests.cpp
(+83 files in other folders)
